v1.2.7 (2017.12.xx)
  - Improve handling of in-progress Recorded TV streams that have switched from a live to a recorded state
  - Add support for processing Recorded TV Edit Decision Lists (EDL)

v1.2.6 (2017.11.30)
  - Fix forward seeking problems with Live TV streams
  - Fix playback problems with in-progress Recorded TV streams

v1.2.5 (2017.11.28)
  - Add "Use backend genre string(s) in Electronic Program Guide (EPG)" setting
  - Add "Show DRM protected channels in channel lineups" setting
  - Add synchronization of recording resume position with the storage engine 

v1.2.4 (2017.11.22)
  - Fix bug preventing background discovery task scheduler from stopping properly
  - Remove forced MPEG-TS packet boundary alignment during stream seek and read operations

v1.2.3 (2017.11.15)
  - Update SQLite database engine to v3.21.0
  - Update cURL library to version 7.56.1
  - Update libhdhomerun library to version 2017.08.16

v1.2.2 (2017.08.02)
  - Fix EPG update being aborted prematurely when requesting guide data from the past

v1.2.1 (2017.08.02)
  - Add "Disable Channel", "Add to Favorite Channels" and "Remove from Favorite Channels" Client Actions to channel context menus
  - Adapt to new backend discovery URLs (api.hdhomerun.com)
  - Fall back to using a direct tuner stream for Live TV if a storage engine has not been discovered on the network
  - Add "List discovered devices" PVR Client Specific setting

v1.2.0 (2017.07.23)
  - Update libhdhomerun library to version 2017.06.12
  - Fix disabling of seek for Live TV when "Stream LiveTV channels directly from tuner device(s)" is enabled
  - Remove custom addon callback implementations in favor of the standard ones provided in Kodi source code
  - Update MPEG-TS stream implementation to support Recorded TV as well as tuner-direct Live TV streams
  - Detect and remove MPEG-TS SCTE PIM (0xC0) table when inserted before the PMT (0x02) table in the same PSI packet